--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
 		</dependency>
 
 		<!-- JPA-->
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>-->
+		</dependency>
 
 		<!-- Lombok: https://projectlombok.org/ -->
 		<dependency>
