--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -1,2 +1,9 @@
-- name: Simple commit
-  uses: zwaldowski/git-commit-action@v1
+name: Retry
+on: []
+jobs:
+  retry:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: zwaldowski/git-commit-action@v1
+        with:
+          commit_message: "Commit test"
